<resources>
    <string name="app_name">Emeals</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="app_emailAdd">E-mail Address</string>
    <string name="app_login">Login</string>
    <string name="app_sigin">Emeals Signin</string>
    <string name="app_post">Emeals Post</string>
    <string name="app_show">Emeals Show</string>
    <string name="app_search">Emeals Search</string>
    <string name="app_change">Emeals Change</string>
    <string name="app_edit">Emeals Edit</string>
    <string name="loginbg">Loginbg</string>
    <string name="emeals_username">Emeals Username</string>
    <string name="button">Button</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="other_username">other username</string>
    <string name="community">Community</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="description">Description</string>
    <string name="todo2">TODO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_email">Email</string>
    <string name="email">Email</string>
    <string name="reset">RESET</string>
    <string name="popular_recipe">Popular Recipe</string>
    <string name="image">image</string>
    <string name="recent_recipe">Recent Recipe</string>
    <string name="my_recipe">My Recipe</string>
    <string name="home_btn">home_btn</string>
    <string name="profile_btn">profile_btn</string>
    <string name="post_btn">post_btn</string>
    <string name="logout_btn">logout_btn</string>
    <string name="profile_post_btn">profile_post_btn</string>
</resources>