<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="138dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/firstName"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:hint="@string/first_name"
        android:textColorHint="#00838F"
        android:textColorLink="#00838F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastName"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/last_name"
        android:textColorHint="#00838F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_register"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:hint="@string/email_address"
        android:textColorHint="#00838F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_register"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:textColorHint="#00838F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_register" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/register"
        android:textColor="#616161"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_register"
        app:layout_constraintVertical_bias="0.055"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>