<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/textView4"
        android:layout_width="376dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reset_email"
        android:layout_width="356dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:hint="@string/email"
        android:textColorLink="#78909C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="298dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/reset"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_email" />
</androidx.constraintlayout.widget.ConstraintLayout>