<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDC066"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:padding="10dp"
        android:text="Welcome to Emeals"
        android:textAlignment="center"
        android:textColor="#5D4037"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="625dp"
        android:background="#F6E3A9"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/popular_recipe"
                android:textColor="#795548"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                tools:contentDescription="@string/popular_recipe">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:srcCompat="@drawable/ic_android_black_24dp" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/icon_logo" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/recent_recipe"
                android:textColor="#795548"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                tools:contentDescription="@string/recent_recipe">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="300dp">

                    <ImageView
                        android:id="@+id/profile_post_btn"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_android_black_24dp" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_home" />

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/my_recipe"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        tools:srcCompat="@drawable/ic_baseline_add_24" />

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        tools:srcCompat="@drawable/ic_android_black_24dp" />
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/profile_btn"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/profile_btn"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageButton
        android:id="@+id/post_btn"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/post_btn"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>